--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,12 @@ cls_train_celeba.txt
 cls_train.txt
 help.py
 help.ipynb
+helper.ipynb
+faceweb_cls_train.txt
+celeba_cls_train.txt
+
+launch.json
+run_local.sh
 
 
 # Byte-compiled / optimized / DLL files
